src/components/ContentSidebar/SidebarContent.scss
@import '../variables';

.bcs-content {
    border-left: 1px solid $off-white;
    margin-left: -1px; // -1px to make nav button hover not have blank space
    position: relative;
    width: 341px; // 1px extra to account for the margin left

    .bcs-content-header {
        align-items: center;
        border-bottom: 1px solid $off-white;
        display: flex;
        height: 60px;
        justify-content: space-between;
        margin: 0 25px;
        padding: 0;

        .bcs-title {
            font-size: 16px;
            font-weight: 400;
            margin: 0;
            padding: 0;
        }
    }

    .bcs-scroll-content-wrapper {
        bottom: 0;
        left: 0;
        overflow: auto;
        padding-top: 15px;
        position: absolute; // Prevents non-sidebar parts from re-painting
        right: 0;
        top: 60px; // Same as title above

        .bcs-scroll-content {
            width: 323px; // 17px less than the total width for scroll bar
        }

        .bcs.bcs-activity & {
            padding-top: 0;

            .bcs-scroll-content {
                height: 100%;
                width: 100%;
            }
        }
    }
}

